--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,44 +1,62 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.multialarm.MainActivity" >
+    android:orientation="vertical"
+    android:background="@drawable/main">
 
 	<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="vertical">
+       	</LinearLayout>
+  	
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical" >
-        
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Choose your situation to define your own alarm" />
+        android:layout_height="300dp"
+        android:orientation="vertical" 
+       	android:layout_gravity="center_horizontal">
     
-    <Button
-        android:id="@+id/button_sleep"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sleeping" />
-
-    <Button
-        android:id="@+id/button_run"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Running" />
-
-    <Button
-        android:id="@+id/button_cook"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cooking" />
-
-
+    <TextView
+  		    android:id="@+id/mytime"
+  		    android:layout_width="match_parent"
+  		    android:layout_height="150dp"
+  		    android:gravity="center"
+  		    android:textColor="@android:color/black"
+  		    android:textSize="60sp" /> 
     </LinearLayout>
 
-</RelativeLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:orientation="horizontal" >
+
+            <Button
+                android:id="@+id/bt_sleep"
+                android:layout_width="80dp"
+                android:layout_height="150dp"
+                android:layout_weight="1"
+                android:background="#00000000" />
+
+            <Button
+                android:id="@+id/bt_run"
+                android:layout_width="80dp"
+                android:layout_height="150dp"
+                android:layout_weight="1"
+                android:background="#00000000" />
+
+            <Button
+                android:id="@+id/bt_cook"
+                android:layout_width="80dp"
+                android:layout_height="150dp"
+                android:layout_weight="1"
+                android:background="#00000000" />
+
+            <Button
+                android:id="@+id/bt_self"
+                android:layout_width="80dp"
+                android:layout_height="150dp"
+                android:layout_weight="1"
+                android:background="#00000000" />
+        </LinearLayout>
+</LinearLayout>
