--- a/res/layout/activity_sleep.xml
+++ b/res/layout/activity_sleep.xml
@@ -2,29 +2,79 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@drawable/sleep" >
     
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Setting the Sleeping Alarm" />
+   <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="vertical">
+       	</LinearLayout>
+  		<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:orientation="vertical"
+       	android:layout_gravity="center_horizontal">
 
-    <TextView
-        android:id="@+id/textView_alarm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="60px"
-        android:textStyle="bold"
-        android:text="" />
+  		<TextView
+  		    android:id="@+id/mytime"
+  		    android:layout_width="match_parent"
+  		    android:layout_height="150dp"
+  		    android:gravity="center"
+  		    android:textColor="@android:color/black"
+  		    android:textSize="60sp" />	   
+	   
+	    <Button
+	        android:id="@+id/button_set"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center_horizontal"
+	        android:text="Add Alarm" />
+	    
+ 	</LinearLayout>
 
-    <Button
-        android:id="@+id/button_set"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Sleeping Alarm" />
+  		<LinearLayout
+  		    android:layout_width="match_parent"
+  		    android:layout_height="wrap_content"
+  		    android:orientation="vertical" >
+	    
+		    <TextView
+		        android:id="@+id/textView_alarm"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:textSize="60px"
+		        android:textStyle="bold"
+		        android:text="" />
+  		    
+  		</LinearLayout>
 
+  	    <LinearLayout
+  	        android:layout_width="match_parent"
+  	        android:layout_height="wrap_content"
+  	        android:orientation="horizontal">
 
+  	        <Button
+  	            android:id="@+id/bt_noisy"
+  	            android:layout_width="wrap_content"
+  	            android:layout_height="150dp"
+  	            android:layout_weight="1"
+  	            android:background="#00000000" />
+
+  	        <Button
+  	            android:id="@+id/bt_regular"
+  	            android:layout_width="wrap_content"
+  	            android:layout_height="150dp"
+  	            android:layout_weight="1"
+  	            android:background="#00000000" />
+
+  	        <Button
+  	            android:id="@+id/button"
+  	            android:layout_width="wrap_content"
+  	            android:layout_height="150dp"
+  	            android:layout_weight="1"
+  	            android:background="#00000000" />
+  	    </LinearLayout>
+  	
      
     <ToggleButton
             android:id="@+id/btn_enClk"
