--- a/res/layout/activity_run.xml
+++ b/res/layout/activity_run.xml
@@ -12,7 +12,7 @@
        	</LinearLayout>
   		<LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="250dp"
         android:orientation="vertical"
        	android:layout_gravity="center_horizontal">
 
@@ -32,6 +32,27 @@
 	        android:text="Add Alarm" />
 	    
  	</LinearLayout>
+
+  		<LinearLayout
+  		    android:layout_width="match_parent"
+  		    android:layout_height="wrap_content"
+  		    android:orientation="horizontal" >
+	    
+		    <TextView
+		        android:id="@+id/textView_alarm"
+		        android:layout_width="300dp"
+		        android:layout_height="wrap_content"
+		        android:textSize="60px"
+		        android:textStyle="bold"
+		        android:text="" />
+  		        
+  		    <ToggleButton
+	            android:id="@+id/btn_enClk"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:gravity="right"
+	            android:checked="false"/>
+  		</LinearLayout>
 
   	
 
